[Add] Add get trading book func
