# ReadNest/src/api/@types/index.ts
@@ -329,6 +329,8 @@ export type GetBookTradingPostResponse = {
   title?: string | null | undefined;
   author?: string | null | undefined;
   imageUrl?: string | null | undefined;
+  condition?: string | null | undefined;
+  tradingRequestIds?: string[] | null | undefined;
 }
 
 export type GetBookTradingPostResponseListApiResponse = {
@@ -336,6 +338,21 @@ export type GetBookTradingPostResponseListApiResponse = {
   messageId?: string | null | undefined;
   message?: string | null | undefined;
   data?: GetBookTradingPostResponse[] | null | undefined;
+  listDetailError?: DetailError[] | null | undefined;
+}
+
+export type GetBookTradingPostResponsePagingResponse = {
+  items?: GetBookTradingPostResponse[] | null | undefined;
+  totalItems?: number | undefined;
+  pageIndex?: number | undefined;
+  pageSize?: number | undefined;
+}
+
+export type GetBookTradingPostResponsePagingResponseApiResponse = {
+  success?: boolean | undefined;
+  messageId?: string | null | undefined;
+  message?: string | null | undefined;
+  data?: GetBookTradingPostResponsePagingResponse | undefined;
   listDetailError?: DetailError[] | null | undefined;
 }
 
@@ -653,6 +670,7 @@ export type TradingPost = {
   owner?: User | undefined;
   offeredBookId?: string | undefined;
   offeredBook?: Book | undefined;
+  title?: string | null | undefined;
   status?: string | null | undefined;
   condition?: string | null | undefined;
   shortDesc?: string | null | undefined;
@@ -661,7 +679,6 @@ export type TradingPost = {
   messageToRequester?: string | null | undefined;
   tradingRequests?: TradingRequest[] | null | undefined;
   images?: TradingPostImage[] | null | undefined;
-  title?: string | null | undefined;
 }
 
 export type TradingPostImage = {
@@ -670,9 +687,9 @@ export type TradingPostImage = {
   updatedAt?: string | undefined;
   isDeleted?: boolean | undefined;
   tradingPostId?: string | undefined;
-  tradingPost?: TradingPost | undefined;
   imageUrl?: string | null | undefined;
   order?: number | undefined;
+  tradingPost?: TradingPost | undefined;
 }
 
 export type TradingRequest = {
