# ReadNest/src/api/api/v1/trading-posts/index.ts
@@ -3,6 +3,18 @@ import type { DefineMethods } from 'aspida';
 import type * as Types from '../../../@types';
 
 export type Methods = DefineMethods<{
+  get: {
+    query?: {
+      UserId?: string | undefined;
+      PageIndex?: number | undefined;
+      PageSize?: number | undefined;
+    } | undefined;
+
+    status: 200;
+    /** OK */
+    resBody: Types.GetBookTradingPostResponsePagingResponseApiResponse;
+  };
+
   post: {
     status: 200;
     /** OK */
